src/objects/Master_Letter_List__c.object
<CustomObject>
    <fields>
        <fullName>Letter_Name__c</fullName>
        <label>Letter Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Type__c</fullName>
        <label>Letter Type</label>
        <picklist>
            <picklistValues>
                <fullName>Wall Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-print Certificate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <globalPicklist>Credential_Type</globalPicklist>
        <label>License Type</label>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Master Letter List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Master Letter List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Letter Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>